--- a/day 1/exci2.html
+++ b/day 1/exci2.html
@@ -20,6 +20,17 @@
     <p id="demo">
         Date of
     </p>
+
+
+
+    <button type="button" onclick="document.getElementById('shohan').innerHTML='Hello word'">
+        yes
+    </button>
+
+    <p id="shohan">
+        shohan
+    </p>
+
 </body>
 
 </html>
