--- a/day 1/exci2.html
+++ b/day 1/exci2.html
@@ -31,6 +31,16 @@
         shohan
     </p>
 
+    <button type="button"
+        onclick="document.getElementById('get').innerHTML='I am shohanur rahman.I am student for northden university of bangladesh'">
+
+        university
+    </button>
+
+    <p id="get">
+        shohan Identi
+    </p>
+
 </body>
 
 </html>
