--- a/day 1/exci2.html
+++ b/day 1/exci2.html
@@ -41,6 +41,19 @@
         shohan Identi
     </p>
 
+
+
+
+
+
+    <button type="button" onclick="document.getElementById('hello').innerHTML='MY NAME IS SHOHAN'">
+        shohan
+    </button>
+
+    <p id="hello">
+        love
+    </p>
+
 </body>
 
 </html>
