add comment external js

--- a/day 2/index.html
+++ b/day 2/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script>
+    <script src="index.js">
         alert("Hello Frist javascript");
         document.write("I am shohan.<br>");
         console.log("shohan");
